--- a/index.html
+++ b/index.html
@@ -1,75 +1,75 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>AgriNexus All-in-One SaaS</title>
+  <meta charset="UTF-8" />
+  <title>AgriNexus 통합 SaaS 플랫폼</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
 <header>
-  <h1>🌍 AgriNexus 세계 최고 전자동 SaaS 플랫폼</h1>
-  <p>기능은 하나도 빠짐없이 모두 유지되고 자동 연결되어 진화합니다.</p>
+  <h1>🌍 AgriNexus 전자동 글로벌 플랫폼</h1>
+  <p>모든 기능은 연결되어 있으며, 실시간 반영되며, 하나도 빠지지 않습니다.</p>
 </header>
-
 <main>
   <section>
-    <h2>📌 사용자 주요 기능</h2>
+    <h2>📌 고객 중심 기능</h2>
     <div class="menu">
       <a href="/client-view">고객 대시보드</a>
-      <a href="/upload">파일 업로드</a>
-      <a href="/connect">질문 연결 시스템</a>
-      <a href="/smart-recommend">기능 추천기</a>
-      <a href="/chat-flow">챗봇 대화 흐름</a>
+      <a href="/upload">파일 제출</a>
+      <a href="/connect">질문 기반 연결</a>
+      <a href="/smart-recommend">기능 추천</a>
+      <a href="/chat-flow">챗봇 대화</a>
     </div>
   </section>
-
   <section>
-    <h2>📑 계약 · 분석 · 수익</h2>
+    <h2>📄 계약 · 분석 · 수익</h2>
     <div class="menu">
       <a href="/contract-pdf">계약서 생성</a>
-      <a href="/ai-contract-summary">AI 계약 요약</a>
+      <a href="/ai-contract-summary">AI 요약</a>
       <a href="/revenue-report">수익 계산기</a>
-      <a href="/forecast-report">예측 리포트</a>
-      <a href="/email-report">이메일 리포트 전송</a>
+      <a href="/forecast-report">수익 예측 리포트</a>
+      <a href="/email-report">이메일 전송</a>
     </div>
   </section>
-
   <section>
-    <h2>🌍 글로벌 · 번역 · 설치</h2>
+    <h2>🌍 글로벌 시스템</h2>
     <div class="menu">
-      <a href="/ai-translator">AI 다국어 번역기</a>
+      <a href="/ai-translator">AI 번역기</a>
       <a href="/lang-detect">언어 감지</a>
-      <a href="/pwa/install.html">앱 설치 (PWA)</a>
-      <a href="/landing.html">랜딩 페이지</a>
-      <a href="/generate">자동 생성</a>
+      <a href="/user-stats">국가/시간별 분석</a>
+      <a href="/landing.html">홍보용 랜딩</a>
+      <a href="/compare-decision">옵션 비교 흐름</a>
     </div>
   </section>
-
   <section>
-    <h2>📊 관리자 기능</h2>
+    <h2>🔐 관리자 기능</h2>
     <div class="menu">
       <a href="/admin-panel">관리자 대시보드</a>
       <a href="/admin-report">리포트 분석</a>
-      <a href="/user-stats">사용자 통계</a>
       <a href="/user-role">권한 설정</a>
     </div>
   </section>
-
   <section>
     <h2>🧾 회원 · 결제 · 정책</h2>
     <div class="menu">
-      <a href="/join">회원가입 / 탈퇴</a>
+      <a href="/join">회원가입</a>
       <a href="/payment">결제 정보</a>
       <a href="/faq">자주 묻는 질문</a>
       <a href="/terms">이용약관</a>
     </div>
   </section>
+  <section>
+    <h2>📱 앱설치 · 지속 업데이트</h2>
+    <div class="menu">
+      <a href="/pwa/install.html">앱 설치 (PWA)</a>
+      <a href="/generate">자동 생성</a>
+      <a href="/dashboard">전체 기능 대시보드</a>
+    </div>
+  </section>
 </main>
-
 <footer>
-  ⓒ 2025 AgriNexus World — 지금 이 시스템은 계속 진화 중입니다.
+  ⓒ 2025 AgriNexus World — 이 포털은 진화하며 사용자의 가치를 반영합니다.
 </footer>
 </body>
 </html>
