--- a/index.html
+++ b/index.html
@@ -1,75 +1,67 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>AgriNexus 통합 SaaS 플랫폼</title>
+  <meta charset="UTF-8">
+  <title>AgriNexus Ultimate SaaS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <header>
-  <h1>🌍 AgriNexus 전자동 글로벌 플랫폼</h1>
-  <p>모든 기능은 연결되어 있으며, 실시간 반영되며, 하나도 빠지지 않습니다.</p>
+  <h1>🌍 AgriNexus Ultimate 글로벌 SaaS 플랫폼</h1>
+  <p>계약 → 수익 → 분석 → 저장 → 서명 → 마케팅까지 하나로 연결된 운영 시스템</p>
 </header>
+
 <main>
   <section>
-    <h2>📌 고객 중심 기능</h2>
+    <h2>📥 핵심 진입 기능</h2>
     <div class="menu">
-      <a href="/client-view">고객 대시보드</a>
-      <a href="/upload">파일 제출</a>
-      <a href="/connect">질문 기반 연결</a>
-      <a href="/smart-recommend">기능 추천</a>
-      <a href="/chat-flow">챗봇 대화</a>
+      <a href="/login">로그인</a>
+      <a href="/signin">회원가입</a>
+      <a href="/dashboard">대시보드</a>
+      <a href="/client-view">고객포털</a>
+      <a href="/connect">질문 연결</a>
     </div>
   </section>
+
   <section>
-    <h2>📄 계약 · 분석 · 수익</h2>
+    <h2>📄 계약 · 분석 · 저장</h2>
     <div class="menu">
       <a href="/contract-pdf">계약서 생성</a>
-      <a href="/ai-contract-summary">AI 요약</a>
-      <a href="/revenue-report">수익 계산기</a>
-      <a href="/forecast-report">수익 예측 리포트</a>
-      <a href="/email-report">이메일 전송</a>
+      <a href="/pdf/generate">PDF 생성기</a>
+      <a href="/email-report">이메일 리포트 전송</a>
+      <a href="/revenue-report">수익 분석기</a>
     </div>
   </section>
+
   <section>
-    <h2>🌍 글로벌 시스템</h2>
+    <h2>🖊️ 전자서명 기능</h2>
     <div class="menu">
-      <a href="/ai-translator">AI 번역기</a>
-      <a href="/lang-detect">언어 감지</a>
-      <a href="/user-stats">국가/시간별 분석</a>
-      <a href="/landing.html">홍보용 랜딩</a>
-      <a href="/compare-decision">옵션 비교 흐름</a>
+      <a href="/contract-sign">전자서명</a>
     </div>
   </section>
+
   <section>
-    <h2>🔐 관리자 기능</h2>
+    <h2>📈 관리자 리포트 + 행동 추적</h2>
     <div class="menu">
       <a href="/admin-panel">관리자 대시보드</a>
       <a href="/admin-report">리포트 분석</a>
-      <a href="/user-role">권한 설정</a>
+      <a href="/data">사용 기록 저장</a>
     </div>
   </section>
+
   <section>
-    <h2>🧾 회원 · 결제 · 정책</h2>
+    <h2>📢 마케팅 · 광고 기능</h2>
     <div class="menu">
-      <a href="/join">회원가입</a>
-      <a href="/payment">결제 정보</a>
-      <a href="/faq">자주 묻는 질문</a>
-      <a href="/terms">이용약관</a>
-    </div>
-  </section>
-  <section>
-    <h2>📱 앱설치 · 지속 업데이트</h2>
-    <div class="menu">
-      <a href="/pwa/install.html">앱 설치 (PWA)</a>
-      <a href="/generate">자동 생성</a>
-      <a href="/dashboard">전체 기능 대시보드</a>
+      <a href="/landing.html">랜딩 페이지</a>
+      <a href="/smart-recommend">기능 추천기</a>
+      <a href="/compare-decision">옵션 비교기</a>
     </div>
   </section>
 </main>
+
 <footer>
-  ⓒ 2025 AgriNexus World — 이 포털은 진화하며 사용자의 가치를 반영합니다.
+  ⓒ 2025 AgriNexus World – 전자동 + 리포트 + 서명 + 마케팅 기능 포함.
 </footer>
 </body>
 </html>
