--- a/index.html
+++ b/index.html
@@ -2,66 +2,62 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus Ultimate SaaS</title>
+  <title>AgriNexus World - 스마트팜 SaaS 플랫폼</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
 <header>
-  <h1>🌍 AgriNexus Ultimate 글로벌 SaaS 플랫폼</h1>
-  <p>계약 → 수익 → 분석 → 저장 → 서명 → 마케팅까지 하나로 연결된 운영 시스템</p>
+  <h1>🌱 AgriNexus World</h1>
+  <p>AI 기반 스마트팜 플랫폼 | 계약 · 수익 · 배송 · 번역 · 챗봇까지 전자동화</p>
+  <nav>
+    <a href="/login">로그인</a>
+    <a href="/signin">회원가입</a>
+    <a href="/dashboard">기능대시보드</a>
+    <a href="/contact">문의</a>
+  </nav>
 </header>
 
 <main>
-  <section>
-    <h2>📥 핵심 진입 기능</h2>
-    <div class="menu">
-      <a href="/login">로그인</a>
-      <a href="/signin">회원가입</a>
-      <a href="/dashboard">대시보드</a>
-      <a href="/client-view">고객포털</a>
+  <section class="hero">
+    <h2>스마트팜 운영, 한 곳에서 전부 해결</h2>
+    <p>계약서 생성부터 수익 리포트, 배송 분석, 고객 응답까지 <br/>단 3분 안에 실행되는 통합형 플랫폼</p>
+    <a class="cta" href="/portal">지금 시작하기 →</a>
+  </section>
+
+  <section class="grid">
+    <div class="card">
+      <h3>📄 계약서 자동화</h3>
+      <p>입력 → 요약 → PDF → 전자서명까지 연결된 계약 흐름</p>
+      <a href="/contract-pdf">계약서 생성</a>
+    </div>
+    <div class="card">
+      <h3>💰 수익 분석</h3>
+      <p>예상 금액 입력 → 수익 예측 리포트 자동 출력</p>
+      <a href="/forecast-report">수익 예측</a>
+    </div>
+    <div class="card">
+      <h3>🌎 글로벌 번역</h3>
+      <p>AI 기반 다국어 번역기로 해외 거래도 문제 없이</p>
+      <a href="/ai-translator">번역기</a>
+    </div>
+    <div class="card">
+      <h3>🤖 질문-응답 연결</h3>
+      <p>사용자 질문 → 기능 추천 → 바로 실행 흐름</p>
       <a href="/connect">질문 연결</a>
     </div>
   </section>
 
-  <section>
-    <h2>📄 계약 · 분석 · 저장</h2>
-    <div class="menu">
-      <a href="/contract-pdf">계약서 생성</a>
-      <a href="/pdf/generate">PDF 생성기</a>
-      <a href="/email-report">이메일 리포트 전송</a>
-      <a href="/revenue-report">수익 분석기</a>
-    </div>
-  </section>
-
-  <section>
-    <h2>🖊️ 전자서명 기능</h2>
-    <div class="menu">
-      <a href="/contract-sign">전자서명</a>
-    </div>
-  </section>
-
-  <section>
-    <h2>📈 관리자 리포트 + 행동 추적</h2>
-    <div class="menu">
-      <a href="/admin-panel">관리자 대시보드</a>
-      <a href="/admin-report">리포트 분석</a>
-      <a href="/data">사용 기록 저장</a>
-    </div>
-  </section>
-
-  <section>
-    <h2>📢 마케팅 · 광고 기능</h2>
-    <div class="menu">
-      <a href="/landing.html">랜딩 페이지</a>
-      <a href="/smart-recommend">기능 추천기</a>
-      <a href="/compare-decision">옵션 비교기</a>
-    </div>
+  <section class="feature">
+    <h2>📦 물류 & 배송 분석 · 전자서명 · PDF 자동화까지</h2>
+    <p>전자계약, 수익 계산, PDF 출력, 이메일 전송, 설치형 앱까지 실사용 흐름으로 완성</p>
   </section>
 </main>
 
 <footer>
-  ⓒ 2025 AgriNexus World – 전자동 + 리포트 + 서명 + 마케팅 기능 포함.
+  ⓒ 2025 AgriNexus World – 고객의 질문과 데이터가 플랫폼을 성장시킵니다.
 </footer>
+
 </body>
 </html>
