--- a/index.html
+++ b/index.html
@@ -2,70 +2,72 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>🎁 할인쿠폰 추천 · 자동 전송</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <title>💬 고객 요청 응답 + 업셀링 제안 시스템</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body { font-family: sans-serif; padding: 2rem; background: #fefce8; color: #111827; }
-    h1 { color: #ca8a04; }
-    input, select {
+    body { font-family: sans-serif; padding: 2rem; background: #f0fdf4; color: #111827; }
+    h1 { color: #15803d; }
+    textarea, input {
       width: 100%;
-      max-width: 400px;
+      max-width: 600px;
       padding: 0.6rem;
-      margin: 0.5rem 0;
+      margin-top: 0.5rem;
     }
     button {
+      padding: 0.6rem 1.2rem;
       margin-top: 1rem;
-      padding: 0.75rem 1.5rem;
-      background: #d97706;
+      background: #16a34a;
       color: white;
       border: none;
       border-radius: 6px;
       cursor: pointer;
     }
-    .result {
+    .response {
       margin-top: 2rem;
       background: white;
       padding: 1.2rem;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     }
+    .upsell {
+      margin-top: 1rem;
+      padding: 1rem;
+      background: #ecfccb;
+      border-left: 4px solid #84cc16;
+    }
   </style>
 </head>
 <body>
-  <h1>🎁 고객 등급 기반 할인쿠폰 자동 추천</h1>
-  <input id="email" placeholder="고객 이메일" />
-  <select id="tier">
-    <option value="bronze">Bronze 등급</option>
-    <option value="silver">Silver 등급</option>
-    <option value="gold">Gold 등급</option>
-    <option value="vip">VIP 등급</option>
-  </select>
-  <button onclick="send()">쿠폰 전송</button>
+  <h1>💬 고객 요청 자동 응답 + 업셀링 제안</h1>
+  <label>고객 요청 내용 입력</label>
+  <textarea id="request" rows="4" placeholder="예: 계약서 기능 외에 수익 분석도 원합니다."></textarea>
+  <button onclick="respond()">응답 생성</button>
 
-  <div id="result" class="result">쿠폰 추천 결과가 여기에 표시됩니다.</div>
+  <div class="response" id="response" style="display:none;">
+    <div id="autoReply"></div>
+    <div class="upsell" id="upsellBox"></div>
+  </div>
 
 <script>
-  emailjs.init("_YOUR_EMAILJS_PUBLIC_KEY_"); // EmailJS 실제 키로 교체
+  function respond() {
+    const text = document.getElementById("request").value.toLowerCase();
+    let reply = "🤖 고객님의 요청을 반영했습니다.";
+    let upsell = "";
 
-  function send() {
-    const email = document.getElementById("email").value;
-    const tier = document.getElementById("tier").value;
-    const coupons = {
-      bronze: "WELCOME5K",
-      silver: "SAVE10K",
-      gold: "AGRI20",
-      vip: "VIP50"
-    };
-    const message = `🎉 ${tier.toUpperCase()} 등급 전용 쿠폰 코드: ${coupons[tier]}\n감사합니다!`;
+    if (text.includes("수익") || text.includes("분석")) {
+      reply += "\n📈 수익 분석 기능은 아래에서 바로 이용하실 수 있습니다.";
+      upsell = "💡 더 많은 계약 데이터 기반 예측이 필요하신가요? ➤ <a href='/forecast-report'>예측 리포트 보러가기</a>";
+    } else if (text.includes("계약") && text.includes("메일")) {
+      reply += "\n📬 이메일로 계약 내용을 자동 전송해드릴 수 있어요.";
+      upsell = "💼 계약 리포트를 PDF로 받아보시려면 ➤ <a href='/email-report'>이메일 리포트 보내기</a>";
+    } else {
+      reply += "\n🧠 문의하신 내용을 기반으로 유사 기능을 분석 중입니다.";
+      upsell = "🔍 다양한 기능을 검색하고 싶으시면 ➤ <a href='/connect'>기능 연결 페이지로 이동</a>";
+    }
 
-    // 이메일 전송
-    emailjs.send("default_service", "template_xxxx", {
-      message,
-      email
-    }).then(() => {
-      document.getElementById("result").innerHTML = `✅ ${tier.toUpperCase()} 쿠폰 <b>${coupons[tier]}</b>이 ${email}로 전송되었습니다.`;
-    });
+    document.getElementById("autoReply").innerText = reply;
+    document.getElementById("upsellBox").innerHTML = upsell;
+    document.getElementById("response").style.display = "block";
   }
 </script>
 </body>
